Add necessary add-opens
* sun.net.www.protocol.http
* com.sun.tools.javac.api
* java.util.stream